--- a/Safezone-GO Java/Safezone-GO Java/src/main/resources/application.properties
+++ b/Safezone-GO Java/Safezone-GO Java/src/main/resources/application.properties
@@ -1,15 +1,4 @@
-spring.application.name=GS
-spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521/orcl
-spring.datasource.username=rm558373
-spring.datasource.password=110206
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
-spring.jpa.show-sql=true
-
-
-server.port=8080
-
-
-
+spring.datasource.url=jdbc:sqlserver://<jdbc:sqlserver://meusqlserver123.database.windows.net:1433;database=CP1;user=azureuser@meusqlserver123;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;database=<CP1>
+spring.datasource.username=azureuser
+spring.datasource.password=MinhaSenha@123
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
