--- a/Safezone-GO Java/Safezone-GO Java/src/main/resources/application.properties
+++ b/Safezone-GO Java/Safezone-GO Java/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:sqlserver://<jdbc:sqlserver://meusqlserver123.databas
 spring.datasource.username=azureuser
 spring.datasource.password=MinhaSenha@123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
